##########################
#
#  p o i n t v i e w e r
#
##########################

# Distribution definition

EXTRA_DIST = \
      autogen.sh                \
      Pointviewer.dsp           \
      Pointviewer.dsw           \
      icon.ico                  \
      icon.rc                   \
      pointviewer.dox           \
      pointviewer.html          \
      pointviewer.css           \
      pointviewer.png           \
      bcpp.cfg                  \

bin_PROGRAMS = pv

pv_SOURCES = \
PVMain.cpp \
PVView.cpp PVView.h \
PVControl.cpp PVControl.h \
PVModel.cpp PVModel.h \
PVModelFile.cpp PVModelFile.h \
PVLoadPVM.cpp PVLoadPVM.h \
PVLoadAscii.cpp PVLoadAscii.h \
PVTranslateCenter.cpp PVTranslateCenter.h \
PVScaleNormalise.cpp PVScaleNormalise.h \
PVCloud.cpp PVCloud.h \
PVState.cpp PVState.h \
PVThread.cpp PVThread.h \
PVPoint.h \
PVCommand.h \
PVSet.h \
PVMath.h \
PVException.h
